# ZennWgpu

./: README.md
.idx/: dev.nix
Rust/GPGPUCalc/: Cargo.toml
Rust/GPGPUCalc/src/: main.rs  shader.wgsl  state.rs
Rust/InterStage/workspace/: Cargo.toml
Rust/InterStage/workspace/src/: state.rs
Rust/Triangle/.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
Rust/Triangle/workspace/src/: main.rs  shader.wgsl  state.rs  triangle.rs  vertex_struct.rs
Rust/UniformBuffer/workspace/: Cargo.toml
Rust/UniformBuffer/workspace/src/: main.rs  new.rs  new_shader.wgsl  old.rs  state.rs  uniform-shader.wgsl
Rust/UniformBuffer/workspace/src/new/: state.rs  triangle.rs  vertex.rs
Rust/UniformBuffer/workspace/src/old/: old_triangle.rs  old_uniform.rs  old_vertex_struct.rs
Rust/WebGPU/.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
Rust/WebGPU/workspace/: Cargo.toml  index.html
Rust/WebGPU/workspace/example-doc/: index.html
Rust/WebGPU/workspace/src/: instance.rs  main.rs  state.rs
Rust/WebGPU/workspace/src/camera/: camera.rs  camera.wgsl  mod.rs  state_with_camera.rs  uniform_buffer.rs
Rust/WebGPU/workspace/src/colorful_triangle/: colorful_shader.wgsl  mod.rs  state_with_instancing.rs  state_with_vertex.rs  triangle_vertex.rs
Rust/WebGPU/workspace/src/pentagon/: mod.rs  state_with_vertex_index.rs
Rust/WebGPU/workspace/src/texture/: mod.rs  state_with_texture.rs  texture.rs  texture.wgsl  utakata_texture.rs  (+1 more)
TypeScript/Triangle-With-Vite/: bun.lockb  index.html  package.json  tsconfig.json
TypeScript/Triangle-With-Vite/src/: main.ts
(+2 files in other folders)
